# geo-tools

./: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  axiom.yaml
flows/: geo-hull-area.flow.yaml
messages/: messages.proto
nodes/: area.rs  area_test.rs  bearing.rs  bearing_test.rs  bounding_box.rs  bounding_box_test.rs  centroid.rs  centroid_test.rs  contains.rs  contains_test.rs  convex_hull.rs  convex_hull_test.rs  destination.rs  destination_test.rs  distance.rs  distance_test.rs  geoutil.rs  length.rs  length_test.rs  simplify.rs  simplify_test.rs
src/: axiom_context.rs
